--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -16,8 +16,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-        debug{
-            applicationIdSuffix ".debug"
+        debug {
             debuggable true
         }
 
@@ -30,6 +29,10 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     api 'com.google.dagger:dagger:2.25.4'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.gms:play-services:10.2.1'
+    implementation 'com.google.firebase:firebase-appindexing:10.2.1'
+    implementation 'com.google.android.gms:play-services-analytics:10.2.1'
+    implementation 'com.google.firebase:firebase-firestore:17.1.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.25.4'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
