--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,17 @@ android {
 
     }
 }
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'org.greenrobot:eventbus:3.0.0'
     api 'com.google.dagger:dagger:2.25.4'
+    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.gms:play-services:10.2.1'
     implementation 'com.google.firebase:firebase-appindexing:10.2.1'
