--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'org.greenrobot:eventbus:3.0.0'
     api 'com.google.dagger:dagger:2.25.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.gms:play-services:10.2.1'
