--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.android.gms:play-services:10.2.1'
     implementation 'com.google.firebase:firebase-appindexing:10.2.1'
     implementation 'com.google.android.gms:play-services-analytics:10.2.1'
     implementation 'com.google.firebase:firebase-firestore:17.1.2'
@@ -46,4 +45,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
