--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:theme="@style/AppTheme">
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key"></meta-data>
+        <uses-library android:name="org.apache.http.legacy"
+            android:required="false"/>
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
